# obs-twitch-limiter

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/actions/build-plugin/: action.yaml
.github/scripts/: Build-Windows.ps1  fetch-deps.ps1
.github/workflows/: release.yml
src/: CMakeLists.txt  TwitchLimiterWrapper.cpp  plugin-main.c
src/betting_limit/: CMakeLists.txt  TwitchLimiter.cpp  TwitchLimiter.hpp  TwitchLimiterWrapper.c  TwitchLimiterWrapper.cpp  TwitchLimiterWrapper.h  eventsub.cpp  eventsub.hpp  plugin.cpp  plugin.hpp
vcpkg_ports/libobs/: portfile.cmake  vcpkg.json
